--- a/Examples/TodoApp/Base.lproj/ChecklistView.xib
+++ b/Examples/TodoApp/Base.lproj/ChecklistView.xib
@@ -59,7 +59,7 @@
                                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                                 <subviews>
                                                     <textField verticalHuggingPriority="750" fixedFrame="YES" allowsCharacterPickerTouchBarItem="NO" translatesAutoresizingMaskIntoConstraints="NO" id="8Zo-ea-rf9" customClass="TextField" customModule="PLBindableControls">
-                                                        <rect key="frame" x="28" y="6" width="244" height="18"/>
+                                                        <rect key="frame" x="25" y="6" width="166" height="18"/>
                                                         <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES"/>
                                                         <textFieldCell key="cell" lineBreakMode="truncatingTail" sendsActionOnEndEditing="YES" title="Item" id="Fvx-j0-KyZ">
                                                             <font key="font" metaFont="system"/>
@@ -68,13 +68,22 @@
                                                         </textFieldCell>
                                                     </textField>
                                                     <button fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="dJY-On-Sd5">
-                                                        <rect key="frame" x="2" y="5" width="22" height="18"/>
+                                                        <rect key="frame" x="-1" y="5" width="22" height="18"/>
                                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                                                         <buttonCell key="cell" type="check" bezelStyle="regularSquare" imagePosition="left" state="on" inset="2" id="ycg-sY-1gG">
                                                             <behavior key="behavior" changeContents="YES" doesNotDimImage="YES" lightByContents="YES"/>
                                                             <font key="font" metaFont="system"/>
                                                         </buttonCell>
                                                     </button>
+                                                    <textField verticalHuggingPriority="750" fixedFrame="YES" allowsCharacterPickerTouchBarItem="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ioO-mI-o7k" customClass="TextField" customModule="PLBindableControls">
+                                                        <rect key="frame" x="195" y="3" width="85" height="18"/>
+                                                        <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES"/>
+                                                        <textFieldCell key="cell" lineBreakMode="truncatingTail" sendsActionOnEndEditing="YES" alignment="right" title="hi" id="z0P-Fr-Mfb">
+                                                            <font key="font" metaFont="system" size="11"/>
+                                                            <color key="textColor" name="secondaryLabelColor" catalog="System" colorSpace="catalog"/>
+                                                            <color key="backgroundColor" name="controlColor" catalog="System" colorSpace="catalog"/>
+                                                        </textFieldCell>
+                                                    </textField>
                                                 </subviews>
                                                 <connections>
                                                     <outlet property="textField" destination="8Zo-ea-rf9" id="yqf-LE-Ixt"/>
